# Aschenputtel

./: README.md  aschenputtel.py  noxfile.py  pyproject.toml
test/: aschenputtel_test.py
test/testdirectory/inDifferentDir/: validation.toml
test/testdirectory/inSameDir/: validation.toml
